--- a/6-sol/6-sol.tex
+++ b/6-sol/6-sol.tex
@@ -1,41 +1,15 @@
-\documentclass[12pt,a4paper, spanish]{article}
-% Sacar draft para que aparezcan las imagenes.
-% Opciones: 12pt, 10pt, 11pt, landscape, twocolumn, fleqn, leqno...
-% Opciones de clase: article, report, letter, beamer...
+\input{../macros/preamble-general.tex}
 
-% Paquetes:
-% =========
-\usepackage[headheight=110pt, top = 2cm, bottom = 2cm, left=1cm, right=1cm]{geometry} %modifico márgenes
-\usepackage[T1]{fontenc} % tildes
-\usepackage[utf8]{inputenc} % Para poder escribir con tildes en el editor.
-\usepackage[english]{babel} % Para cortar las palabras en silabas, creo.
-\usepackage[ddmmyyyy]{datetime}
-\usepackage{amsmath} % Soporte de mathmatics
-\usepackage{amssymb} % fuentes de mathmatics
-\usepackage{array} % Para tablas y eso
-\usepackage{caption} % Configuracion de figuras y tablas
-\usepackage[dvipsnames]{xcolor} % Para colorear el texto: black, blue, brown, cyan, darkgray, gray, green, lightgray, lime, magenta, olive, orange, pink, purple, red, teal, violet, white, yellow.
-\usepackage{graphicx} % Necesario para poner imagenes
-\usepackage{enumitem} % Cambiar labels y más flexibilidad para el enumerate
-\usepackage{tikz} % para graficar
-\usepackage{cancel}
-\usepackage{titlesec} % para editar titulos y hacer secciones con formato a medida
-\usepackage{ulem}
-\usepackage{centernot} % tacha cosas
-\usepackage{bbding} % símbolos de donde uso FiveStar
-\usepackage{skull} % símbolos de donde uso Skull
-% \usepackage{lipsum}
-\usepackage{soul} % para tachar en mathmode -> \hbox{\sout{$x+1$}}
-\usepackage{bbding} % símbolos de donde uso FiveStar
+% Algunos paquetes quizás exclusivos de este archivo que no
+% quiero poner en el preamble-general
+% el día de mañana podría integrarse
+\usetikzlibrary{decorations.pathreplacing}
 
-% para hacer los graficos tipo grafos
-\usetikzlibrary{shapes,arrows.meta, chains, matrix, calc, trees, positioning, fit}
-\usetikzlibrary{external,angles,quotes,decorations.pathreplacing}
-
-\setlength{\parindent}{0pt} % Para que no haya indentación en las nuevas líneas.
+% Definiciones y macros para que se me haga
+% más ameno el codeo.
+\input{../macros/definiciones.tex}
 
 \begin{document}
-\include{definiciones.tex} % idem con las definiciones
 
 \pagestyle{empty} % Para que no muestre el número en pie de página
 
@@ -47,6 +21,7 @@
 \maketitle  % para que aprezca el título en el documento
 
 \newpage
+
 \section{Definiciones y fórmulas útiles}
 \textit{\underline{Raíces de un número complejo: }}
 \begin{itemize}
@@ -141,7 +116,7 @@ $S = -1 + 1 + 5 - 1 -4 -1 = -1$\\
 \textit{Si $w \distinto \pm 1$: }\\
 $S = w^{71} + w^{-14} + 5\conj w^4 + w^{39} - 4w^{-22} + w^{2023} =
 	w^5 + w^4 + 5 w^2 + w^3 - 4w^2 + w^1 =\\
-	w^1 + w^2 + w^3 + w^4 + w^5 = \magenta{$-1$} + \ub{\magenta{$1$} + w^1 + w^2 + w^3 + w^4 + w^5}{=0} = -1$
+	w^1 + w^2 + w^3 + w^4 + w^5 = \magenta{-1} + \ub{\magenta{1} + w^1 + w^2 + w^3 + w^4 + w^5}{=0} = -1$
 
 
 \ejercicio
@@ -237,7 +212,7 @@ $\llave{l}{
 		|z|^5 e^{5 \theta i} = |z|^5 e^{-5 \theta i}
 		\sisolosi
 		\llave{l}{
-			5 \theta = -5 \theta + \magenta{$2k\pi$}\\
+			5 \theta = -5 \theta + \magenta{2k\pi}\\
 			\to \boxed{\theta_k = \frac{1}{5}k\pi} \text{ con } k \en [0,4]
 		}
 	}$\\
@@ -278,7 +253,7 @@ $\flecha{acomodo la }[ecuación]
 	r^n e^{n \theta i} = r^2 e^{(\frac{3}{2}\pi - 2\theta)i}
 	\sisolosi
 	\llaves{l}{
-		n \theta =\frac{3}{2}\pi - 2\theta  + \magenta{$2k\pi$}\quad (k \en \enteros)\\
+		n \theta =\frac{3}{2}\pi - 2\theta  + \magenta{2k\pi}\quad (k \en \enteros)\\
 		r^n = r^2 \to r^2 (r^{n-2} - 1) = 0
 	}$\\
 
@@ -326,7 +301,7 @@ Si $w \en G_n \entonces
 	      \textit{Si} $w \distinto 1$: \\
 	      $w + \ub{\conj w}{w^6} + (w + w^2)^2 - w^{38}(1 - w^2) =
 		      w + w^6 + w^2 + 2w^3 + w^4 - \ub{(w^7)^5}{=1} w^3(1 - w^2) =\\
-		      =  \magenta{$-1$} + \ub{\magenta{1} + w + w^2 + w^3 + w^4 + w^5 + w^6}{=0} = -1 \Tilde$
+		      =  \magenta{-1} + \ub{\magenta{1} + w + w^2 + w^3 + w^4 + w^5 + w^6}{=0} = -1 \Tilde$
 
 	\item Calcular $w^{73} + \conj w \cdot w^9 + 8$ para cada $w\en G_3$.
 
@@ -336,13 +311,13 @@ Si $w \en G_n \entonces
 
 	      \textit{Si} $w \distinto 1$: \\
 	      $\ub{w^{73}}{w} + \ub{\conj w \cdot w^9 }{w^2 \cdot 1}+ 8 =
-		      \magenta{$-1$} + \ub{\magenta{1} + w + w^2}{= 0} + 8 = 7 $
+		      \magenta{-1} + \ub{\magenta{1} + w + w^2}{= 0} + 8 = 7 $
 
 	\item Calcular $1 + w^2 + w^{-2} + w^4 + w^{-4}$ para cada $w\en G_{10}$.
 
 	      \separadorCorto
 	      \red{Me falta harto golpe de horno para entender lo que pasa acá}\\
-	      \red{¿Cómo tengo que interpretar la info de $G_5 \subseteq G_{10}$? está proveyendo}\\
+	      \red{¿Cómo tengo que interpretar la info de $G_5 \subseteq G_{10}$ está proveyendo?}\\
 
 	      \begin{minipage}{0.65\textwidth}
 		      \textit{Si} $w = \pm1$: \\
@@ -351,10 +326,10 @@ Si $w \en G_n \entonces
 		      \textit{Si} $w \distinto \pm1$: \\
 		      $1 + w^2 + w^{-2} + w^4 + w^{-4} = 1 + w^2 + w^8 + w^4 + w^6\\
 			      \llave{l}{
-				      \flecha{\red{¿justificar?}}[\magenta{$G_5$}]
+				      \flecha{\red{¿justificar?}}[$\magenta{G_5}$]
 				      1 + w^2 + w^3 + w^4 + w^5 = 0\\
-				      \flecha{\red{¿justificar?}}[\cyan{$G_5$}]
-				      1 + \magenta{$1$} + \ub{\magenta{$-1$} + w^2 + w^3 + w^4 + w^5}{=0} = 2
+				      \flecha{\red{¿justificar?}}[$\cyan{G_5}$]
+				      1 + \magenta{1} + \ub{\magenta{-1} + w^2 + w^3 + w^4 + w^5}{ = 0} = 2
 			      }$
 	      \end{minipage}
 	      \begin{minipage}{0.4\textwidth}
@@ -391,9 +366,9 @@ Si $w \en G_n \entonces
 					      \fi
 				      }
 		      \end{tikzpicture}
-		      \red{No tiene al 1? No es $G_5$}
-		      \red{Solo vale el primer gráfico?}
-		      \red{Condiciona los $w$ del ejercicio?}
+		      \red{No tiene al 1? No es $G_5$\\
+			      Solo vale el primer gráfico?\\
+			      Condiciona los $w$ del ejercicio?}
 	      \end{minipage}
 
 	\item Calcular $w^{14} + w^{-8} + \conj w^4 + \conj{w^{-3}}$ para cada $w \en G_5$
@@ -405,7 +380,7 @@ Si $w \en G_n \entonces
 	      \textit{Si} $w \distinto 1$: \\
 	      $w^{14} + w^{-8} + \conj w^4 + \conj{w^{-3}} =
 		      w^4 + w^2 + w + w^3 =
-		      \magenta{$-1$} + \ub{\magenta{1} + w + w^2 + w^3 + w^4}{= 0} = -1 $
+		      \magenta{-1} + \ub{\magenta{1} + w + w^2 + w^3 + w^4}{= 0} = -1 $
 
 
 \end{enumerate}
@@ -425,8 +400,8 @@ Si $w \en G_n \entonces
 
 	      Si
 	      $\sumatoria{k=7}{60}w^{4k} =
-		      \ub{\sumatoria{k=7}{60}w^{4k} + \magenta{$\sumatoria{k=0}{6}w^{4k}$}}{\sumatoria{k=0}{60}w^{4k}}
-		      - \magenta{$\sumatoria{k=0}{6}w^{4k}$} =
+		      \ub{\sumatoria{k=7}{60}w^{4k} + \magenta{\sumatoria{k=0}{6}w^{4k}}}{\sumatoria{k=0}{60}w^{4k}}
+		      - \magenta{\sumatoria{k=0}{6}w^{4k}} =
 		      \sumatoria{k=0}{60}w^{4k} - \sumatoria{k=0}{6}w^{4k} =
 		      \frac{(w^4)^{61} - 1}{w^4 - 1} - \frac{(w^4)^7 - 1}{w^4 - 1} =
 		      \frac{(w^4)^{61} - (w^4)^7 }{w^4 - 1}\\
@@ -551,7 +526,9 @@ Se define en $\complejos - \set{0}$ la relación $\relacion$ dada por $z \relaci
 \separadorCorto
 
 \begin{enumerate}[label=\roman*)]
-	\item Dado un $z = r\cdot e^{i\theta}$, en forma exponencial $\re{z} >0 \sisolosi \theta = 2k\pi$ con $k \en \enteros$
+	\item Dado un $z = r e^{i\theta}$, tengo que $z\en \reales_{>0} \sisolosi
+		      \re(z) > 0 \y \im(z) = 0 \sisolosi
+		      r > 0 \y \theta = 2k\pi$ con $k \en \enteros$
 	      \begin{itemize}
 		      \item  \textit{Reflexividad: } $z = r e^{i\theta},\, z \relacion z = r^2 e^{2\theta i}$ por lo tanto
 		            $z \relacion z \sisolosi 2\theta = 2 k\pi \sisolosi \theta = k\pi \Tilde$
@@ -572,18 +549,108 @@ Se define en $\complejos - \set{0}$ la relación $\relacion$ dada por $z \relaci
 	      \end{itemize}
 
 	\item
-	      arg$( 1 + i) = \frac{\pi}{4}$ los $w \en \complejos$ tales que $z \relacion w \sisolosi \text{arg}(w) =\frac{1}{4}\pi$
-	      \begin{tikzpicture}[baseline=0, scale = 2, every node/.style={font=\tiny}]
-		      % \draw[help lines, dashed, step=0.25, ultra thin](-.5,-0.5) grid (1.5,1.5);
+	      \begin{minipage}{0.7\textwidth}
+		      Tengo que el arg$( 1 + i) = \frac{\pi}{4}$. La clase  $\clase z$ estará formada por los $w \en \complejos$ tal que:
+		      \boxed{ w \relacion z \sisolosi \text{arg}(w) = \frac{1}{4}\pi}
+	      \end{minipage}
+	      \begin{minipage}{0.3\textwidth}
+		      \begin{tikzpicture}[baseline=0, scale = 2, every node/.style={font=\tiny}]
+			      % \draw[help lines, dashed, step=0.25, ultra thin](-.5,-0.5) grid (1.5,1.5);
 
-		      \draw[ultra thin,->,gray] (-.5,0) -- (1.5,0) node[below] {Re};
-		      \draw[ultra thin,->,gray] (0,-.5) -- (0,1.5) node[right] {Im};
-		      \draw[dotted, magenta, -latex] (0,0) -- (1.5,1.5) node[right] {$\clase{z}$};
-		      % \draw[ultra thin] (0,0) circle (1);
-		      \filldraw[thin] (1,1) circle (0.5pt) node[above] {$z$}; % Added the origin
-		      \draw[thin] (0,0) circle (2pt); % Added the origin
-		      \draw[thin, decorate,decoration={brace,amplitude=2pt,mirror,raise=1pt}] (0,0) -- (1,1) node[midway,below right] {$\sqrt{2}$} ;
-	      \end{tikzpicture}
+			      \draw[ultra thin,->,gray] (-.5,0) -- (1.5,0) node[below] {Re};
+			      \draw[ultra thin,->,gray] (0,-.5) -- (0,1.5) node[right] {Im};
+			      \draw[dotted, magenta, -latex] (0,0) -- (1.5,1.5) node[right] {$\clase{z}$};
+			      % \draw[ultra thin] (0,0) circle (1);
+			      \filldraw[thin] (1,1) circle (0.5pt) node[above] {$z$}; % Added the origin
+			      \draw[thin] (0,0) circle (2pt); % Added the origin
+			      \draw[thin, decorate,decoration={brace,amplitude=2pt,mirror,raise=1pt}] (0,0) -- (1,1) node[midway,below right] {$\sqrt{2}$} ;
+		      \end{tikzpicture}
+	      \end{minipage}
+\end{enumerate}
+
+%15
+\ejercicio
+Se define la siguiente relación $\relacion$ en $G_{20}$:
+\[
+	z\relacion w \sisolosi zw^9 \en G_2.
+\]
+\begin{enumerate}[label=\roman*)]
+	\item Probar que $\relacion$ es una relación de equivalencia.
+	\item Calcular la cantidad de elementos que hay en cada clase de equivalencia.
+\end{enumerate}
+
+\separadorCorto
+\begin{minipage}{0.6\textwidth}
+	Si $z \y w \en G_{20} \sisolosi
+		\llave{l}{
+			z_k = e^{i \frac{2\pi}{20}k_z }\\
+			z_w = e^{i \frac{2\pi}{20}k_w }
+		}$ con $r_{20}(k_{\set{z,w}}) \en \enteros_{[0,19]}$\\
+	$G_2 = \set{-1, 1} \entonces zw^9 =
+		e^{i \frac{2\pi}{20}(k_z + 9 k_w)} \en G_2 \sisolosi\\
+		\sisolosi \frac{1}{10}(k_z + 9 k_w)\cancel\pi = k\cancel\pi \sisolosi
+		\boxed{k_z = 10k - 9 k_w }$ con $k\en \enteros$\\
+	Entonces si $z_{k_z} = e^{i \frac{2\pi}{20}k_z} =
+		e^{i \frac{2\pi}{20}(10k - 9 k_w)}$ se tiene que\\
+	$z \cdot w^9 =
+		e^{i \frac{2\pi}{20}(10k - 9 k_w)} \cdot e^{i \frac{18}{20} k_w} =
+		e^{i k\pi} =
+		\llave{rl}{
+			1 & \text{si $k$ par} \\
+			-1 & \text{si $k$ impar} \\
+		}$\\
+	\red{No le cazo la onda. Entiendo que si $w^k, con k=2 \divideA 20 \entonces w\en G_{10}$
+		¿y entonces?
+		Está bien pedir esa condición para que se relacionen? }
+\end{minipage}
+\begin{minipage}{0.3\textwidth}
+	\begin{tikzpicture}[baseline=0,scale = 2.5, every node/.style={font=\tiny}]
+		\draw[ultra thin,->,gray] (-1.5,0) -- (1.7,0) node[below] {Re};
+		\draw[ultra thin,->,gray] (0,-1.5) -- (0,1.7) node[right] {Im};
+		\draw[ultra thin] (0,0) circle (1);
+		% \filldraw[thin] (-.5,0) circle (1pt) node[below] {$-\frac{1}{2}$};
+		% \draw[latex-latex, blue] (-.5,0.1) -- (0.5,0.1) node[midway, above]{ 1};
+		% \node[right] at (1*360/20:1)  {$e^{\frac{2\pi}{6}i}$} ;
+		% \node[right] at (5*360/20:1)  {$e^{-\frac{2\pi}{6}i}$} ;
+		\foreach \x in {0,...,19} {
+				\filldraw (\x*360/20:1) circle (0.5pt);
+				\filldraw (\x*360/20:1.3) node { $e^{i\frac{\x}{20}2\pi}$};
+				\ifnum\x<20
+					\draw[thick, magenta] (\x*360/20:1) -- ({(\x+1)*360/20}:1);
+				\fi
+				\ifnum\x<10
+					\draw[thick, cyan] (\x*360/10:1) -- ({(\x+1)*360/10}:1);
+				\fi
+			}
+	\end{tikzpicture}
+\end{minipage}\\
+
+
+\begin{enumerate}[label=\roman*)]
+	\item
+	      \begin{itemize}
+		      \item
+		            \begin{minipage}{0.7\textwidth}
+			            \textit{Reflexividad: }
+			            Si $ z = e^{i\frac{1}{10}\pi k_z} \entonces
+				            z \relacion z \sisolosi
+				            k_z \cancel\pi= k\cancel\pi $ \Tilde
+
+		            \end{minipage}
+		            \begin{minipage}{0.3\textwidth}
+			            \begin{tikzpicture}[baseline=0, scale = 2, every node/.style={font=\tiny}]
+				            % \draw[help lines, dashed, step=0.25, ultra thin](-.5,-0.5) grid (1.5,1.5);
+
+				            \draw[ultra thin,->,gray] (-.5,0) -- (1.5,0) node[below] {Re};
+				            \draw[ultra thin,->,gray] (0,-.5) -- (0,1.5) node[right] {Im};
+				            \draw[dotted, magenta, -latex] (0,0) -- (1.5,1.5) node[right] {$\clase{z}$};
+				            % \draw[ultra thin] (0,0) circle (1);
+				            \filldraw[thin] (1,1) circle (0.5pt) node[above] {$z$}; % Added the origin
+				            \draw[thin] (0,0) circle (2pt); % Added the origin
+				            \draw[thin, decorate,decoration={brace,amplitude=2pt,mirror,raise=1pt}] (0,0) -- (1,1) node[midway,below right] {$\sqrt{2}$} ;
+			            \end{tikzpicture}
+		            \end{minipage}
+	      \end{itemize}
 \end{enumerate}
 
 \end{document}
