--- a/7-guia/7-sol.tex
+++ b/7-guia/7-sol.tex
@@ -1,40 +1,15 @@
-\documentclass[12pt,a4paper, spanish]{article}
-% Sacar draft para que aparezcan las imagenes.
-% Opciones: 12pt, 10pt, 11pt, landscape, twocolumn, fleqn, leqno...
-% Opciones de clase: article, report, letter, beamer...
+\input{../macros/preamble-general.tex}
 
-% Paquetes:
-% =========
-\usepackage[headheight=110pt, top = 2cm, bottom = 2cm, left=1cm, right=1cm]{geometry} %modifico márgenes
-\usepackage[T1]{fontenc} % tildes
-\usepackage[utf8]{inputenc} % Para poder escribir con tildes en el editor.
-\usepackage[english]{babel} % Para cortar las palabras en silabas, creo.
-\usepackage[ddmmyyyy]{datetime}
-\usepackage{amsmath} % Soporte de mathmatics
-\usepackage{amssymb} % fuentes de mathmatics
-\usepackage{array} % Para tablas y eso
-\usepackage{caption} % Configuracion de figuras y tablas
-\usepackage[dvipsnames]{xcolor} % Para colorear el texto: black, blue, brown, cyan, darkgray, gray, green, lightgray, lime, magenta, olive, orange, pink, purple, red, teal, violet, white, yellow.
-\usepackage{graphicx} % Necesario para poner imagenes
-\usepackage{enumitem} % Cambiar labels y más flexibilidad para el enumerate
-\usepackage{tikz} % para graficar
-\usepackage{cancel}
-\usepackage{titlesec} % para editar titulos y hacer secciones con formato a medida
-\usepackage{ulem}
-\usepackage{centernot} % tacha cosas
-\usepackage{bbding} % símbolos de donde uso FiveStar
-\usepackage{skull} % símbolos de donde uso Skull
-% \usepackage{lipsum}
-\usepackage{soul} % para tachar en mathmode -> \hbox{\sout{$x+1$}}
+% Algunos paquetes quizás exclusivos de este archivo que no
+% quiero poner en el preamble-general
+% el día de mañana podría integrarse
 \usepackage{polynom} % para división de polinomios
 
-% para hacer los graficos tipo grafos
-\usetikzlibrary{shapes,arrows.meta, chains, matrix, calc, trees, positioning, fit}
-\usetikzlibrary{external}
-
+% Definiciones y macros para que se me haga
+% más ameno el codeo.
+\input{../macros/definiciones.tex}
 
 \begin{document}
-\include{definiciones.tex} % idem con las definiciones
 
 \pagestyle{empty} % Para que no muestre el número en pie de página
 
@@ -63,12 +38,12 @@
 	\item \textit{Algoritmo de división}: $f,g \en \K[X]$ no nulos, existen únicos $q$ y $R \en \K[X]$ tal que $f = q\cdot g + R$
 	      con $gr(R) < gr(f)$ o $R = 0$
 
-	\item $\alpha$ es raíz de $f \sisolosi X - \alpha \dividea f \sisolosi f = q \cdot ( X - \alpha)$
+	\item $\alpha$ es raíz de $f \sisolosi X - \alpha \divideA f \sisolosi f = q \cdot ( X - \alpha)$
 
 	\item \textit{Máximo común divisor: } Polinomio mónico de mayor grado que divide a ambos polinomios en $\K[X]$
 	      y vale el algoritmo de Euclides.
 	      \begin{itemize}
-		      % \item $(f:g) \dividea f$ y $(f:g) \dividea g$
+		      % \item $(f:g) \divideA f$ y $(f:g) \divideA g$
 
 		      \item $f = (f:g)\cdot k_f$ y $g = (f:g)\cdot k_g$ con $k_f$ y $k_g$ en $\K[X]$
 
@@ -76,11 +51,11 @@
 	      \end{itemize}
 
 	\item \textit{Raíces múltiples: } $f \en \K[x], \alpha \en \K$ es raíz de $f$ de multiplicidad
-	      $m \en \naturales_0$ si $(X - \alpha)^m \dividea f$ y $(X - \alpha)^{m+1} \noDivide f$.
+	      $m \en \naturales_0$ si $(X - \alpha)^m \divideA f$ y $(X - \alpha)^{m+1} \noDivide f$.
 	      O sea, $f = (X - \alpha)^m \cdot q(\alpha) \distinto 0$
 
 	\item Vale que $\alpha$ es raíz múltiple de $f \sisolosi f(\alpha) = 0$ y $f(\alpha) = 0 \sisolosi \alpha$
-      es raíz de $(f:f'),\, X - \alpha \dividea (f:f')$
+      es raíz de $(f:f'),\, X - \alpha \divideA (f:f')$
 
 \end{itemize}
 
